Swapped out jersey for resteasy, Fixed bug in netty and fixed unit tests.